fix(QTime,QTable): missing correct border when on dark mode #5392

--- a/ui/src/components/datetime/QTime.sass
+++ b/ui/src/components/datetime/QTime.sass
@@ -196,3 +196,4 @@
   &--dark
     color: #fff
     background: $grey-9
+    border-color: $separator-dark-color
