--- a/ui/src/components/table/QTable.styl
+++ b/ui/src/components/table/QTable.styl
@@ -241,6 +241,7 @@
   background $grey-9
 
 .q-table--dark
+  border-color $separator-dark-color
 
   .q-table__bottom
     border-top 1px solid $table-dark-border-color
